Fix BEF wrapping.

--- a/full_rubik_style.scss
+++ b/full_rubik_style.scss
@@ -2869,6 +2869,7 @@ label[for="edit-pubdate"] {
     .views-exposed-widget {
       display: inline-block;
       vertical-align: top;
+      float: none;
     }
   }
 }
